--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "dotenv>=0.9.9",
+    "email-validator>=2.2.0",
     "google-apps-chat>=0.2.5",
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.2",
+    "google-cloud>=0.34.0",
+    "google-cloud-firestore>=2.20.2",
+    "vertexai>=1.71.1",
 ]
