--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,17 @@ requires-python = ">=3.9"
 dependencies = [
     "dotenv>=0.9.9",
     "email-validator>=2.2.0",
-    "google-apps-chat>=0.2.5",
-    "google-auth-httplib2>=0.2.0",
-    "google-auth-oauthlib>=1.2.2",
-    "google-cloud>=0.34.0",
-    "google-cloud-firestore>=2.20.2",
-    "vertexai>=1.71.1",
+    "google-adk",
+    "google-apps-chat",
+    "google-auth-httplib2",
+    "google-auth-oauthlib",
+    "google-cloud",
+    "google-cloud-firestore",
+    "langchain-google-vertexai>=2.0.23",
+    "vertexai",
+]
+
+[dependency-groups]
+dev = [
+    "uv-bump>=0.1.2",
 ]
