--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "google-auth-httplib2",
     "google-auth-oauthlib",
     "google-cloud",
+    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
     "google-cloud-firestore",
     "langchain-google-vertexai>=2.0.23",
     "vertexai",
