--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.9"
 dependencies = [
     "dotenv>=0.9.9",
     "email-validator>=2.2.0",
-    "google-adk",
+    "google-adk==0.0.4",
     "google-apps-chat",
     "google-auth-httplib2",
     "google-auth-oauthlib",
